--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
 
         <activity android:name=".activity.MatchDetailActivity"></activity>
         <activity android:name=".activity.SearchActivity"></activity>
+        <activity android:name=".activity.TeamDetailActivity"></activity>
+        <activity android:name=".activity.PlayerDetailActivity"></activity>
     </application>
 
 </manifest>
